20060924
 - (tim) [configure.ac] Remove CFLAGS hack for UnixWare 1.x/2.x (added
   to rev 1.308) to work around broken gcc 2.x header file.

20060923
 - (dtucker) [configure.ac] Bug #1234: Put opensc libs into $LIBS rather than
   $LDFLAGS.  Patch from vapier at gentoo org.

20060922
 - (dtucker) [packet.c canohost.c] Include arpa/inet.h for htonl macros on
   some platforms (eg HP-UX 11.00).  From santhi.amirta at gmail com.

20060921
 - (dtucker) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2006/09/19 05:52:23
     [sftp.c]
     Use S_IS* macros insted of masking with S_IF* flags. The latter may
     have multiple bits set, which lead to surprising results. Spotted by
     Paul Stoeber, more to come. ok millert@ pedro@ jaredy@ djm@
   - markus@cvs.openbsd.org 2006/09/19 21:14:08
     [packet.c]
     client NULL deref on protocol error; Tavis Ormandy, Google Security Team
 - (dtucker) [defines.h] Include unistd.h before defining getpgrp; fixes
   build error on Ultrix.  From Bernhard Simon.

20060918
 - (dtucker) [configure.ac] On AIX, check to see if the compiler will allow
   macro redefinitions, and if not, remove "-qlanglvl=ansi" from the flags.
   Allows build out of the box with older VAC and XLC compilers.  Found by
   David Bronder and Bernhard Simon.
 - (dtucker) [openbsd-compat/port-aix.{c,h}] Reduce scope of includes.
   Prevents macro redefinition warnings of "RDONLY".

20060916
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2006/09/16 19:53:37
     [deattack.c deattack.h packet.c]
     limit maximum work performed by the CRC compensation attack detector,
     problem reported by Tavis Ormandy, Google Security Team;
     ok markus@ deraadt@
 - (djm) Add openssh.xml to .cvsignore and sort it
 - (dtucker) [auth-pam.c] Propogate TZ environment variable to PAM auth
   process so that any logging it does is with the right timezone.  From
   Scott Strickler, ok djm@.
 - (dtucker) [monitor.c] Correctly handle auditing of single commands when