@@ -1,3 +1,7 @@
+20060926
+ - (dtucker) [bufaux.h] nuke bufaux.h; it's already gone from OpenBSD and not
+   referenced any more.  ok djm@
+
 20060924
  - (tim) [configure.ac] Remove CFLAGS hack for UnixWare 1.x/2.x (added
    to rev 1.308) to work around broken gcc 2.x header file.
@@ -2491,4 +2495,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4559 2006/09/26 08:57:28 dtucker Exp $
+$Id: ChangeLog,v 1.4560 2006/09/26 08:59:34 dtucker Exp $
